swagger department
